--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.3",
     "colors": "^1.3.0",
-    "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "multer": "^1.3.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
