--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.18.3",
     "colors": "^1.3.0",
     "connect-redis": "^3.3.3",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "jpeg-autorotate": "^4.0.0",
