--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
     "socket.io-client": "^2.1.1",
+    "url-parse": "^1.4.3",
     "validator": "^10.5.0"
   },
   "scripts": {
